fixed gutters and alignment, good to go

--- a/style.css
+++ b/style.css
@@ -9,10 +9,15 @@ header{
   color: #888;
 }
 
- header img{
+header section{
+  width:960px;
+  margin: 0 auto;
+}
+
+header img{
   float:left;
-  margin-left: 10%;
   margin-top: 21px;
+  margin-right: 80px;
 }
 
 a {
@@ -20,62 +25,55 @@ a {
   text-decoration: none;
 }
 
-a:hover{
+/* a:hover{
   color: #888;
   background-color: #000;
   padding-top: 27px;
   padding-bottom:27px;
   padding-left: 10px;
   padding-right: 10px;
-}
+} */
 
 a:visited{
   color: #888;
 }
 
 header ul{
+  width:960px;
   padding-top: 50px;
   padding-bottom: 50px;
 }
 
 header li{
   display: inline;
-  padding-left: 7%;
+  margin-right: 80px;
 }
 
 /* Main Focus Area */
 
 main{
   background-color: #fff;
-  padding-left: 10%;
   color: #555;
+  width: 960px; 
+  margin: 0 auto;
 }
 
 main img{
   margin-top: 30px;
-  margin-bottom: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
 }
 
-main ul{
-  padding-top: 0px;
-  padding-bottom: 0px;
-  padding-left:0px;
-  padding-right:0px;
-}
 main li{
-  display: inline;
-}
-
-#banner2{
-  margin-left: 30px;
+  float:left;
   margin-right: 30px;
 }
 
-/* section{
-  margin: 10px;
-} */
+main li:last-child{
+  margin-right: 0px;
+}
+
+.clearfix{
+  clear: both;
+}
 
 section img{
   float: left;
